@startuml
class app.entities.Indicator {
+ {static} String indicateColor(int)
+ {static} String indicateWeight(int)
}
class app.Main {
+ {static} void main(String[])
}
class app.sensors.WeightSensor {
+ void update()
}
class app.sensors.ColorSensor {
+ void update()
}
class app.entities.Substance {
- List<Sensor> sensors
- int state
+ int getState()
+ void setState(int)
+ void attach(Sensor)
+ void notifyAllObservers()
}
abstract class app.sensors.Sensor {
# Substance substance
+ {abstract}void update()
}


app.sensors.Sensor <|-- app.sensors.WeightSensor
app.sensors.Sensor <|-- app.sensors.ColorSensor
@enduml